--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title> Little Dan </title>
         <link rel=stylesheet type="text/css" href="style.css" />
         <script src="js/jquery-1.4.2.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/Utility.js"></script>
+        <script src="js/GameLoop.js"></script>
+        <script src="js/GameObject.js"></script>
 
     </head>
     <body>
