--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <script src="js/GameLoop.js"></script>
         <script src="js/GameObject.js"></script>
 
+        <script>
+            var g = new GameObject();
+
+            console.log(g);
+            console.log(g.x);
+        </script>
+
     </head>
     <body>
         <div id='gameWrapper'>
