used call instead of apply

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
         <title> Little Dan </title>
         <link rel=stylesheet type="text/css" href="style.css" />
         <script src="js/jquery-1.4.2.js"></script>
+        <script src="js/Controller.js"></script>
         <script src="js/Utility.js"></script>
         <script src="js/GameLoop.js"></script>
         <script src="js/GameObject.js"></script>
         <script>
-
-        </script>
-
 
         </script>
 
