added draw to tick

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 {
                     requestAnimFrame(animate);
                     littleDan.tick();
+                    littleDan.draw();
                 }
                 animate();
             });
