--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/Utility.js"></script>
         <script src="js/GameLoop.js"></script>
         <script src="js/GameObject.js"></script>
+        <script src="js/Dan.js"></script>
         <script src="js/LittleDan.js"></script>
         <script>
             window.requestAnimFrame = (function()
